# htslib-js

./: .gitignore  CMakeLists.txt  LICENSE  README.md  build.sh  build_native.sh  cast.js  config.h.in  digenome.cpp  digenome.h  faidx_js.cpp  faidx_js.h  hfile_js.cpp  hfile_js.h  hts_js.cpp  hts_js.h  htslib  htslib_worker.asm.js  htslib_worker.js  interface.cpp  interface.h  offt.h  pileup.h  post.js  post.js.in  serve.sh  test.cpp  test_native.cpp  zlib
bam/: treated.sorted.bam  treated.sorted.bam.bai
example_data/: snvs_NA12877_filtered.vcf.gz.csi  snvs_NA12877_filtered.vcf.gz.tbi  wt.sorted.bam.bai
examples/digenome-seq/: build.sh  build_native.sh  digenome  digenome.cpp  digenome.h  digenome.js  interface_js.cpp  interface_native.cpp  post.js.in  post_combined.js
examples/digenome-seq/test/: digenome-seq-worker.js  digenome-seq.html
examples/pileup_bam/: interface_js.cpp  interface_native.cpp  pileup  pileup.cpp  pileup.h  pileup.js  pileup.js.map  post.js.in  post_combined.js
examples/pileup_bam/test/: hg19_1-22_X_Y_M.fa  hg19_1-22_X_Y_M.fa.fai  hg_GRCh38.fa  pileup-bam-worker.js  pileup-bam.html  pileup.js  pileup.js.map  pileup_bam-worker.js  pileup_bam.html
examples/vcf-qc/: array.c  array.h  index.html  vcf_qc.c  worker.js
htslib/: README  hfile.c  hfile_js.c  hts.c  realn.c  sam.c
htslib/cram/: cram_codecs.oo  files.oo  pooled_alloc.oo  sam_header.oo  string_alloc.oo  zfio.oo
htslib/htslib/: .sam.h.swp  sam.h
htslib_native/: Makefile  a.out.js  bgzf.c  bgzip.c  config.h  config.h.in  config.mk  config.status  configure  errmod.c  faidx.c  hfile.c  hfile_internal.h  hfile_js.c  hfile_libcurl.c  hfile_net.c  hts.c  htsfile.c  kfunc.c  knetfile.c  kstring.c  md5.c  plugin.c  probaln.c  realn.c  regidx.c  sam.c  synced_bcf_reader.c  tabix.c  tbx.c  thread_pool.c  vcf.c  vcf_sweep.c  vcfutils.c
htslib_native/autom4te.cache/: output.0  requests
htslib_native/build_native/: config.status
htslib_native/cram/: cram_decode.oo  cram_encode.oo  cram_external.oo  cram_index.oo  cram_io.oo  cram_samtools.oo  cram_stats.oo  mFILE.oo  open_trace_file.oo  rANS_static.oo  vlen.oo
sample/digenome-seq/: build.sh  build_native.sh  build_webassembly.sh  digenome  digenome.bcc  digenome.cpp  digenome.h  digenome.js  interface_js.cpp  post.js  test.bam  test.bam.bai  test_native.cpp  wt.bam  wt.sorted.bam
sample/digenome-seq/test/: digenome.js  worker.js
sample/pileup_bam/: build.sh  build_native.sh  interface_native.cpp  pileup  pileup.cpp  pileup.h  pileup.js  post.js
sample/pileup_bam/test/: test.html  worker.js
test/: htslib_worker.asm.js  htslib_worker.js  test.html  worker.js
zlib/: CMakeLists.txt  Makefile  adler32.lo  compress.lo  crc32.lo  deflate.lo  example64  gzclose.lo  gzlib.lo  gzread.lo  gzwrite.lo  infback.lo  inffast.lo  inflate.lo  inftrees.lo  libz.so.1.2.8  minigzip64  trees.lo  uncompr.lo  ztest3359.js  ztest3359.so.js  zutil.lo
